fixed badly visible message

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,6 +181,7 @@ body {
 }
 
 .success-snackbar {
+  --mdc-snackbar-container-color: #313131;
   --mdc-snackbar-supporting-text-color: white;
   --mat-mdc-snack-bar-button-color: white;
 }
